explicit style rules or grid to only apply for immediate explicit children. Fixes but with nested grids and wrap-sm wrap-lg

--- a/scss/core/rwx-grid.scss
+++ b/scss/core/rwx-grid.scss
@@ -86,7 +86,7 @@ $grid-classes:
 
 		@each $selector, $value in $grid-classes
 		{
-			.rwx-split-#{$selector}
+			> .rwx-split-#{$selector}
 			{
 				word-break:break-word;
 				width: #{$value};
